fix x-scroll overflow in headings\

--- a/app/frontend/packs/styles/base/_typography.scss
+++ b/app/frontend/packs/styles/base/_typography.scss
@@ -26,6 +26,7 @@ html {
   margin: 0;
   padding: 20px;
   width: 100%;
+  box-sizing: border-box;
 }
 
 h1 {
